--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+.container {
+  margin: 5px;
+  width: 200px;
+  height: auto;
+  line-height: 115px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid rgb(221, 221, 221);
+}
+.resize_fit_center {
+  max-width:100%;
+  max-height:100%;
+
+  vertical-align: middle;
+}
+
+
