--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -38,18 +36,16 @@
 }
 .container {
   margin: 5px;
-  width: 200px;
+  width: 200px!important;
   height: auto;
   line-height: 115px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid rgb(221, 221, 221);
 }
 .resize_fit_center {
-  max-width:100%;
-  max-height:100%;
-
+  max-width:100%; 
+  max-height:100%; 
   vertical-align: middle;
 }
 
