--- a/src/App.css
+++ b/src/App.css
@@ -49,4 +49,19 @@
   vertical-align: middle;
 }
 
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 10px;
+  background-color: #9C65F9;
+}
+
+.logo {
+  justify-content: flex-start;
+  display: flex;
+}
+
+
 
